2 commit NewSolution.jsx

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,16 @@
   "FAQ": "FAQ",
   "contacts": "Contacts",
   "bookNow": "Book now!",
-  "sliderTitle": "Massage – harmony of soul and body in every touch"
+  "seeMore": "SEE MORE",
+  "sliderTitle": "Massage – harmony of soul and body in every touch",
+  "photoCollectionTitle_1": "Massage – A Source of Energy",
+  "photoCollectionTitle_2": "Massage – Caring for Health",
+  "photoCollectionTitle_3": "Massage – Harmony of Body and Soul",
+  "photoCollectionTitle_4": "Massage – The Art of Relaxation",
+  "photoCollectionDesc_1": "Massage improves blood circulation and fills the body with new strength.",
+  "photoCollectionDesc_2": "Regular sessions help strengthen the immune system and relieve stress.",
+  "photoCollectionDesc_3": "The procedure alleviates fatigue and restores inner balance.",
+  "photoCollectionDesc_4": "Gentle techniques help forget daily worries and fully relax.",
+  "newSolutionTitle": "Relax and Rejuvenate with Our Expert Massage Services",
+  "newSolutionDesc": "Our massage services are designed for deep relaxation of the body, stress relief, and the restoration of mental harmony. Whether you're seeking an intense deep tissue massage or a soothing aromatherapy session, we offer tailored treatments that meet your unique needs and promote overall well-being and inner balance."
 }
