--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,16 @@
   "FAQ": "FAQ",
   "contacts": "Контакты",
   "bookNow": "Забронировать сейчас!",
-  "sliderTitle": "Массаж – гармония души и тела в каждом прикосновении"
+  "seeMore": "СМОТРЕТЬ БОЛЬШЕ",
+  "sliderTitle": "Массаж – гармония души и тела в каждом прикосновении",
+  "photoCollectionTitle_1": "Массаж — источник энергии",
+  "photoCollectionTitle_2": "Массаж — забота о здоровье",
+  "photoCollectionTitle_3": "Массаж — гармония тела и души",
+  "photoCollectionTitle_4": "Массаж — искусство расслабления",
+  "photoCollectionDesc_1": "Массаж улучшает кровообращение и заряжает тело новой силой.",
+  "photoCollectionDesc_2": "Регулярные сеансы помогают укрепить иммунитет и снять стресс.",
+  "photoCollectionDesc_3": "Процедура снимает усталость и восстанавливает внутренний баланс.",
+  "photoCollectionDesc_4": "Мягкие техники помогают забыть о повседневных заботах и полностью расслабиться.",
+  "newSolutionTitle": "Расслабьтесь и восстановите силы с помощью наших профессиональных услуг массажа",
+  "newSolutionDesc": "Наши услуги массажа созданы для глубокого расслабления тела, снятия напряжения и восстановления гармонии разума. Независимо от того, ищете ли вы интенсивный глубокий массаж тканей или нежный сеанс ароматерапии, мы предлагаем индивидуально подобранные процедуры, которые отвечают вашим уникальным потребностям и способствуют улучшению общего самочувствия и внутреннего баланса."
 }
