--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,30 @@
   "photoCollectionDesc_3": "Процедура снимает усталость и восстанавливает внутренний баланс.",
   "photoCollectionDesc_4": "Мягкие техники помогают забыть о повседневных заботах и полностью расслабиться.",
   "newSolutionTitle": "Расслабьтесь и восстановите силы с помощью наших профессиональных услуг массажа",
-  "newSolutionDesc": "Наши услуги массажа созданы для глубокого расслабления тела, снятия напряжения и восстановления гармонии разума. Независимо от того, ищете ли вы интенсивный глубокий массаж тканей или нежный сеанс ароматерапии, мы предлагаем индивидуально подобранные процедуры, которые отвечают вашим уникальным потребностям и способствуют улучшению общего самочувствия и внутреннего баланса."
+  "newSolutionDesc": "Наши услуги массажа созданы для глубокого расслабления тела, снятия напряжения и восстановления гармонии разума. Независимо от того, ищете ли вы интенсивный глубокий массаж тканей или нежный сеанс ароматерапии, мы предлагаем индивидуально подобранные процедуры, которые отвечают вашим уникальным потребностям и способствуют улучшению общего самочувствия и внутреннего баланса.",
+  "enjoyTitle": "Насладитесь сеансом массажа",
+  "name": "Имя",
+  "required": "Поле обязательное к заполнению",
+  "enterPhoneNumber": "Телефон",
+  "enterValidPhone": "Введите корректный номер телефона",
+  "selectDate": "Выберите дату",
+  "selectTime": "Выберите время",
+  "selectMassageType": "Выберите вид массажа",
+  "bookButton": "Забронировать",
+  "benefitsTitle": "Массаж — лучшее, что вы можешь сделать для своего тела",
+  "benefitsTitle_1": "Глубокое расслабление",
+  "benefitsDesc_1": "Сними напряжение в мышцах, забудь о боли в спине и почувствуй легкость в теле.",
+  "benefitsTitle_2": "Улучшение кровообращения",
+  "benefitsDesc_2": "Почувствуй, как массаж активирует кровообращение, наполняя твое тело энергией и восстанавливая силы.",
+  "benefitsTitle_3": "Снижение стресса",
+  "benefitsDesc_3": "Освободи свой разум от напряжения и стресса, подарив себе минуты покоя и гармонии.",
+  "benefitsTitle_4": "Устранение усталости",
+  "benefitsDesc_4": "Оставь усталость позади и ощущай легкость в теле после расслабляющего массажа.",
+  "thankYouMessageBooking": {
+    "thanks": "Благодарим вас за бронирование!",
+    "youBookOn": "Вы записаны на",
+    "onDate": "",
+    "on": "на",
+    "address": "по адресу: г. Гродно, ул. Горького, 65"
+  }
 }
