4 commit IconsContacts.jsx

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -41,6 +41,9 @@
     "onDate": "on",
     "on": "for a",
     "address": "Address: Grodno, Gorky Street, 65."
-  }
-
+  },
+  "joinUsInstagram": "JOIN US INSTAGRAM",
+  "bookAppointment": "book your Appointment",
+  "callUs": "CALL US +375 (44) 585-98-44",
+  "followUs": "Follow us on Instagram"
 }
