--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -41,5 +41,9 @@
     "onDate": "",
     "on": "на",
     "address": "по адресу: г. Гродно, ул. Горького, 65"
-  }
+  },
+  "joinUsInstagram": "ПРИСОЕДИНЯЙТЕСЬ К НАМ в INSTAGRAM",
+  "bookAppointment": "ЗАПИСАТЬСЯ НА МАССАЖ",
+  "callUs": "ПОЗВОНИТЕ НАМ +375 (44) 585-98-44",
+  "followUs": "Подпишитесь на нас в Instagram"
 }
