--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,7 +5,10 @@
   "FAQ": "FAQ",
   "contacts": "Контакты",
   "bookNow": "Забронировать сейчас!",
+  "totalPrice": "Общая сумма",
   "seeMore": "СМОТРЕТЬ БОЛЬШЕ",
+  "more": "Подробнее",
+  "minutes": "минут",
   "sliderTitle": "Массаж – гармония души и тела в каждом прикосновении",
   "photoCollectionTitle_1": "Массаж — источник энергии",
   "photoCollectionTitle_2": "Массаж — забота о здоровье",
@@ -35,15 +38,40 @@
   "benefitsDesc_3": "Освободи свой разум от напряжения и стресса, подарив себе минуты покоя и гармонии.",
   "benefitsTitle_4": "Устранение усталости",
   "benefitsDesc_4": "Оставь усталость позади и ощущай легкость в теле после расслабляющего массажа.",
+  "servicesTitle": "Разнообразие видов массажа: найдите свой путь к благополучию и расслаблению",
   "thankYouMessageBooking": {
     "thanks": "Благодарим вас за бронирование!",
     "youBookOn": "Вы записаны на",
     "onDate": "",
     "on": "на",
-    "address": "по адресу: г. Гродно, ул. Горького, 65"
+    "address": "по адресу: г. Гродно, ул. Горького, 65",
+    "sum": "Сумма к оплате"
   },
   "joinUsInstagram": "ПРИСОЕДИНЯЙТЕСЬ К НАМ в INSTAGRAM",
   "bookAppointment": "ЗАПИСАТЬСЯ НА МАССАЖ",
   "callUs": "ПОЗВОНИТЕ НАМ +375 (44) 585-98-44",
-  "followUs": "Подпишитесь на нас в Instagram"
+  "followUs": "Подпишитесь на нас в Instagram",
+  "address": "г. Гродно, ул. Горького, 65",
+  "massageType": "Виды массажа",
+  "massageAdvantages": "Преимущества массажа",
+  "massages": {
+    "foot": {
+      "name": "Массаж ног",
+      "desc_1": "помогает расслабить мышцы и снять накопившееся напряжение. это особенно полезно после долгого дня стоя или ходьбы",
+      "desc_2": "способствует улучшению кровотока в ногах. Это помогает доставлять кислород и питательные вещества в ткани, а также удаление отходов и токсинов",
+      "desc_3": "помогает улучшить лимфатический дренаж и уменьшить отеки. Это особенно полезно для людей, страдающих от отеков ног после длительного сидения или стояния",
+      "desc_4": "способствует расслаблению и смягчению мышц ног, а также улучшению подвижности суставов. Это особенно полезно для спортсменов и людей, занимающихся физической активностью",
+      "desc_5": "уменьшает усталость и тяжесть в ногах, помогая восстановить их после длительных нагрузок. Это делает шаг легче и движения комфортнее",
+      "desc_6": "стимулирует нервные окончания на ступнях, что способствует общему расслаблению и снижению стресса. Это помогает улучшить самочувствие и качество сна"
+    },
+    "hand": {
+      "name": "Массаж рук",
+      "desc_1": "помогает расслабить напряженные мышцы и снять усталость после долгого дня работы или интенсивных физических нагрузок",
+      "desc_2": "стимулирует кровообращение в руках, что помогает доставлять больше кислорода и питательных веществ к клеткам, улучшая их функционирование",
+      "desc_3": "способствует снижению уровня стресса и тревоги, помогая расслабиться и улучшить настроение",
+      "desc_4": "улучшает подвижность и гибкость суставов, снять ощущение скованности и улучшить общую функциональность рук",
+      "desc_5": "уменьшает отеки и способствует улучшению лимфатического дренажа, особенно полезно для людей, которые много времени проводят с напряженными руками или кистями",
+      "desc_6": "помогает облегчить боль и дискомфорт при хронических заболеваниях рук, таких как артрит или тендинит, улучшая общую подвижность и снижая воспаление"
+    }
+  }
 }
