6 commit BookForm.jsx

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,7 @@
   "more": "More",
   "minutes": "minutes",
   "sliderTitle": "Massage – harmony of soul and body in every touch",
+  "additionalTreatment": "additional service",
   "photoCollectionTitle_1": "Massage – A Source of Energy",
   "photoCollectionTitle_2": "Massage – Caring for Health",
   "photoCollectionTitle_3": "Massage – Harmony of Body and Soul",
