7 commit AboutUs.jsx

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,11 +3,15 @@
   "aboutUs": "О нас",
   "services": "Услуги",
   "FAQ": "FAQ",
+  "membership": "Сертификаты и абонементы",
   "contacts": "Контакты",
+  "privacyPolicy": "Политика конфиденциальности",
   "bookNow": "Забронировать сейчас!",
   "totalPrice": "Общая сумма",
   "seeMore": "СМОТРЕТЬ БОЛЬШЕ",
   "more": "Подробнее",
+  "UNP": "УНП 000000",
+  "all_right_reserved": "Все права защищены.",
   "minutes": "минут",
   "additionalTreatment": "дополнительная услуга",
   "sliderTitle": "Массаж – гармония души и тела в каждом прикосновении",
@@ -22,13 +26,20 @@
   "newSolutionTitle": "Расслабьтесь и восстановите силы с помощью наших профессиональных услуг массажа",
   "newSolutionDesc": "Наши услуги массажа созданы для глубокого расслабления тела, снятия напряжения и восстановления гармонии разума. Независимо от того, ищете ли вы интенсивный глубокий массаж тканей или нежный сеанс ароматерапии, мы предлагаем индивидуально подобранные процедуры, которые отвечают вашим уникальным потребностям и способствуют улучшению общего самочувствия и внутреннего баланса.",
   "enjoyTitle": "Насладитесь сеансом массажа",
+  "leaveRequest": "Отправить запрос",
   "name": "Имя",
   "required": "Поле обязательное к заполнению",
+  "email": "Email",
+  "correctEmail": "Введите корректный email",
   "enterPhoneNumber": "Телефон",
   "enterValidPhone": "Введите корректный номер телефона",
+  "theme": "Тема",
+  "message": "Сообщение",
+  "minSymbols": "Минимум 10 символов",
   "selectDate": "Выберите дату",
   "selectTime": "Выберите время",
   "selectMassageType": "Выберите вид массажа",
+  "send": "Отправить",
   "bookButton": "Забронировать",
   "benefitsTitle": "Массаж — лучшее, что вы можешь сделать для своего тела",
   "benefitsTitle_1": "Глубокое расслабление",
@@ -146,5 +157,17 @@
       "desc_5": "имеет не только физические, но и психологические преимущества. Он способствует расслаблению, снижению стресса и тревожности, улучшает настроение и общее благополучие спортсмена",
       "desc_6": "способствует улучшению координации движений и снижению риска перегрузок, что особенно важно для спортсменов, стремящихся к высокой точности и эффективности в своих тренировках"
     }
+  },
+  "aboutUsTitle": {
+    "title": "Мы создаем атмосферу расслабления и заботы о вашем здоровье, помогая вам избавиться от напряжения, стресса и усталости.",
+    "whyChooseUs": "Почему выбирают нас?",
+    "title_1": "Профессионализм",
+    "title_2": "Индивидуальный подход",
+    "title_3": "Современные техники",
+    "title_4": "Комфортная атмосфера",
+    "title_5": "Высококачественные масла и материалы",
+    "title_6": "Удобное расположение и доступность",
+    "askTitle": "Если остались вопросы, заполните форму и мы обязательно с вами свяжемся!",
+    "responseText": "Благодарим вас за обращение! Мы свяжемся с вами в ближайшее время!"
   }
 }
