--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,8 @@
   "seeMore": "СМОТРЕТЬ БОЛЬШЕ",
   "more": "Подробнее",
   "UNP": "УНП 000000",
+  "pageNotFoundTitle": "Страница не найдена",
+  "to_main": "Вернуться на главную",
   "all_right_reserved": "Все права защищены.",
   "minutes": "минут",
   "additionalTreatment": "дополнительная услуга",
@@ -283,5 +285,11 @@
     "other_information": "10. Другая информация",
     "update_privacy_policy": "10.1 Мы можем время от времени обновлять данную политику конфиденциальности, публикуя новую версию на нашем веб-сайте.",
     "check_this_page": "10.2 Вам следует время от времени проверять эту страницу, чтобы убедиться, что вас устраивают любые изменения в этой политике конфиденциальности."
+  },
+  "membershipPage": {
+    "certificateTitle": "Подарите заботу и релаксацию с нашими сертификатами на массаж!",
+    "certificateDesc": "Сертификат - это прекрасный способ показать заботу о близких, друзьях или коллегах. Позвольте им насладиться расслабляющими процедурами массажа, которые помогут им расслабиться, снять стресс и восстановить энергию. С сертификатом на массаж Вы дарите не только приятные ощущения, но и заботу о здоровье и благополучии Ваших близких. Выбирайте из различных вариантов сертификатов и создайте неповторимый подарок, который будет ценен и запоминающимся.",
+    "subscriptionTitle": "Регулярные сеансы массажа становятся еще более доступными благодаря нашим удобным абонементам",
+    "subscriptionDesc": "Абонементы предоставляют возможность получить качественные массажные процедуры по выгодной цене и наслаждаться положительными эффектами для вашего тела и души. С абонементом на массаж Вы сможете регулярно заботиться о своем здоровье и благополучии, наслаждаясь приятными и расслабляющими процедурами"
   }
 }
