--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,6 +16,8 @@
   "to_main": "Return to Home",
   "all_right_reserved": "All rights reserved.",
   "minutes": "minutes",
+  "developed_by": "Developed by",
+  "ivan_bezniak": "Ivan Bezniak",
   "additionalTreatment": "Additional Service",
   "sliderTitle": "Massage – harmony of body and soul in every touch",
   "photoCollectionTitle_1": "Massage – a source of energy",
