--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,6 +16,8 @@
   "to_main": "Вернуться на главную",
   "all_right_reserved": "Все права защищены.",
   "minutes": "минут",
+  "developed_by": "Приложение разработал",
+  "ivan_bezniak": "Иван Безняк",
   "additionalTreatment": "дополнительная услуга",
   "sliderTitle": "Массаж – гармония души и тела в каждом прикосновении",
   "photoCollectionTitle_1": "Массаж — источник энергии",
