--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -293,5 +293,11 @@
     "certificateDesc": "A certificate is a wonderful way to show you care for your loved ones, friends, or colleagues. Let them enjoy relaxing massage treatments that help them unwind, relieve stress, and restore energy. With a massage certificate, you give not only pleasant sensations but also care for the health and well-being of those close to you. Choose from various certificate options and create a unique gift that will be both valuable and memorable.",
     "subscriptionTitle": "Regular massage sessions are even more accessible with our convenient subscriptions",
     "subscriptionDesc": "Subscriptions provide the opportunity to receive high-quality massage treatments at an affordable price, enjoying positive effects for both your body and soul. With a massage subscription, you can regularly take care of your health and well-being, enjoying pleasant and relaxing treatments."
+  },
+  "meta": {
+    "home": {
+      "title": "Массаж в Гродно – классический, лица, антицелюлитный, лимфодренажный и другие виды",
+      "description": "Массаж в Гродно: спортивный, шейно-воротниковой зоны, расслабляющий, медовый и другие виды. Помогаем восстановить здоровье и снять напряжение"
+    }
   }
 }
