--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -293,5 +293,35 @@
     "certificateDesc": "Сертификат - это прекрасный способ показать заботу о близких, друзьях или коллегах. Позвольте им насладиться расслабляющими процедурами массажа, которые помогут им расслабиться, снять стресс и восстановить энергию. С сертификатом на массаж Вы дарите не только приятные ощущения, но и заботу о здоровье и благополучии Ваших близких. Выбирайте из различных вариантов сертификатов и создайте неповторимый подарок, который будет ценен и запоминающимся.",
     "subscriptionTitle": "Регулярные сеансы массажа становятся еще более доступными благодаря нашим удобным абонементам",
     "subscriptionDesc": "Абонементы предоставляют возможность получить качественные массажные процедуры по выгодной цене и наслаждаться положительными эффектами для вашего тела и души. С абонементом на массаж Вы сможете регулярно заботиться о своем здоровье и благополучии, наслаждаясь приятными и расслабляющими процедурами"
+  },
+  "meta": {
+    "home": {
+      "title": "Массаж в Гродно – классический, лица, антицелюлитный, лимфодренажный и другие виды",
+      "description": "Массаж в Гродно: спортивный, шейно-воротниковой зоны, расслабляющий, медовый и другие виды. Помогаем восстановить здоровье и снять напряжение"
+    },
+    "aboutUs": {
+      "title": "О нас – Александра, профессиональный массажист в Гродно",
+      "description": "Наш салон – это оазис расслабления и красоты в самом сердце города. Я, Александра, сертифицированный массажист, предлагаю релаксационный, классический массаж и массаж лица."
+    },
+    "faq": {
+      "title": "Часто задаваемые вопросы – массаж в Гродно",
+      "description": "Ответы на часто задаваемые вопросы о массажных услугах в нашем салоне. Узнайте больше о видах массажа, длительности процедур, противопоказаниях и подготовке к сеансу."
+    },
+    "membership": {
+      "title": "Сертификаты и абонементы на массаж – идеальный подарок и забота о здоровье",
+      "description": "Откройте для себя уникальные сертификаты и выгодные абонементы на массаж. Подарите себе и близким здоровье, расслабление и восстановление энергии."
+    },
+    "massages": {
+      "title": "Разнообразие видов массажа – от расслабления до восстановления здоровья",
+      "description": "Выберите идеальный массаж для себя: спины, шейно-воротниковой зоны, лица, ног, рук или медовый массаж. Профессиональный подход, доступные цены и гарантированный комфорт. Забронируйте сеанс массажа в Гродно уже сегодня!"
+    },
+    "contacts": {
+      "title": "Контакты массажного кабинета в Гродно — Александра, профессиональный массажист",
+      "description": "Запишитесь на сеанс массажа через сайт или по телефону +375 44 585-98-44. Массажный кабинет в Гродно, ул. Горького, 65. Также доступен контакт по email: some@gmail.com. Ознакомьтесь с часами работы и присоединяйтесь к нам в соцсетях!"
+    },
+    "privacyPolicy": {
+      "title": "Политика конфиденциальности | Защита ваших данных и конфиденциальность",
+      "description": "Ознакомьтесь с политикой конфиденциальности массажного кабинета. Мы заботимся о защите ваших персональных данных и прозрачности в обработке информации."
+    }
   }
-}
+   }
