--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -296,8 +296,32 @@
   },
   "meta": {
     "home": {
-      "title": "Массаж в Гродно – классический, лица, антицелюлитный, лимфодренажный и другие виды",
-      "description": "Массаж в Гродно: спортивный, шейно-воротниковой зоны, расслабляющий, медовый и другие виды. Помогаем восстановить здоровье и снять напряжение"
+      "title": "Massage in Grodno – Classic, Facial, Anti-Cellulite, Lymphatic Drainage, and More",
+      "description": "Massage in Grodno: sports, cervical-collar zone, relaxing, honey, and other types. Helping restore health and relieve tension."
+    },
+    "aboutUs": {
+      "title": "About Us – Aliaksandra, Professional Massage Therapist in Grodno",
+      "description": "Our salon is an oasis of relaxation and beauty in the heart of the city. I, Aliaksandra, a certified massage therapist, offer relaxation, classic, and facial massage services."
+    },
+    "faq": {
+      "title": "Frequently Asked Questions – Massage in Grodno",
+      "description": "Answers to frequently asked questions about massage services in our salon. Learn more about different types of massage, session duration, contraindications, and preparation for the session."
+    },
+    "membership": {
+      "title": "Massage Certificates and Memberships – The Perfect Gift and Health Care",
+      "description": "Discover unique certificates and beneficial massage memberships. Give yourself and your loved ones the gift of health, relaxation, and energy restoration."
+    },
+    "massages": {
+      "title": "A Variety of Massage Types – From Relaxation to Health Recovery",
+      "description": "Choose the perfect massage for you: back, cervical-collar zone, face, legs, arms, or honey massage. Professional approach, affordable prices, and guaranteed comfort. Book a massage session in Grodno today!"
+    },
+    "contacts": {
+      "title": "Massage Salon Contacts in Grodno – Aliaksandra, Professional Massage Therapist",
+      "description": "Book a massage session via the website or by phone at +375 44 585-98-44. Massage salon in Grodno, 65 Horkaha Street. Contact is also available via email: some@gmail.com. Check our working hours and join us on social media!"
+    },
+    "privacyPolicy": {
+      "title": "Privacy Policy | Protecting Your Data and Confidentiality",
+      "description": "Learn about the privacy policy of our massage salon. We care about protecting your personal data and ensuring transparency in information processing."
     }
   }
 }
